--- a/services/business-advisory/index.html
+++ b/services/business-advisory/index.html
@@ -11,7 +11,7 @@
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>中南大学科学技术协会</title>
+  <title>中南大学计算机学院科协</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon-32x32.png">
@@ -180,7 +180,7 @@ isset; nec non ille vero abstulit, ite est. Digitoque ora ego aethera, comas?</p
     <div class="row">
       <div class="col-12">
         <div class="footer-inner">
-          <h3 class="footer-title">中南大学科学技术协会版权所有</h3>
+          <h3 class="footer-title">中南大学计算机学院科协版权所有</h3>
           <ul>
             
             
